--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     />
 
-    <title>noteCloud</title>
+    <title>noteCloud-secured notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
